crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_7.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2842
expression: "lex_source(r#\"err>out\"#)"
---
## Tokens
```
[
    Name 0..3,
    Greater 3..4,
    Name 4..7,
    Newline 7..7,
]
```
