crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_8.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2846
expression: "lex_source(r#\"r`.*`\"#)"
---
## Tokens
```
[
    String 0..5 (flags = RAW_STRING_LOWERCASE | BACKTICK_STRING),
    Newline 5..5,
]
```
