crates/ruff_python_parser/src/snapshots/ruff_python_parser__lexer__tests__xonsh_9.snap
---
source: crates/ruff_python_parser/src/lexer.rs
assertion_line: 2850
expression: "lex_source(r#\"g`.*`\"#)"
---
## Tokens
```
[
    String 0..5 (flags = BACKTICK_STRING | GLOB_STRING),
    Newline 5..5,
]
```
